--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinancePro - Cloud Accounting & Payroll</title>
+    <title>Financify - Cloud Accounting & Payroll</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <style>
@@ -588,7 +588,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>FinancePro</h3>
+                    <h3>Financify</h3>
                     <ul>
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Careers</a></li>
@@ -625,7 +625,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 FinancePro. All rights reserved.</p>
+                <p>&copy; 2023 Financify. All rights reserved.</p>
             </div>
         </div>
     </footer>
